--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,41 @@
 body {
   box-sizing: border-box;
-  background-color: #13e4afda;
+  background: linear-gradient(#5a93c2, #5a93c2);
 }
-#userName {
-  width: 50%;
-  border-radius: 3px;
-}
+
 #userPas {
-  border-radius: 20px;
-  background-color: rgba(52, 153, 236, 0.274);
+  background-color: rgb(68, 103, 126);
+  border-radius: 50px;
+  box-shadow: 0 15px 25px #00000099;
+  border: 0;
   text-align: center;
-  width: 50%;
+  width: 30%;
   height: 240px;
   padding-top: 30px;
   margin-top: 200px;
 }
 
-#submit_user {
+#userName {
+  outline-width: 0;
   font-size: medium;
-  background-color: rgba(42, 22, 218, 0.466);
   border-radius: 5px;
   width: 50%;
-  height: 40px;
-  padding: 5px;
   border: 0;
+}
+
+#submit_user {
+  font-size: medium;
+  border-radius: 5px;
+  width: 15%;
+  height: 80%;
+  padding: 10px;
+  border: 0;
+  background-color: #5a93c2;
   cursor: pointer;
 }
 
-
 #pin {
   text-align: center;
-  background-color: #510af5a2;
   width: 22%;
   margin: auto;
   margin-top: 50px;
@@ -44,17 +49,25 @@ body {
 
 #keys,
 button {
-  height: 0px;
-  width: 0%;
-  background-color: #fcfcfca2;
-  font-family: 'Franklin Gothic Medium';
+  font-family: "Franklin Gothic Medium";
   font-size: 30px;
-}
-#keys {
-  background-color: #510af5a2;
+  background-color: white;
   border-radius: 8px;
-  height: fit-content;
+  box-shadow: 0 15px 25px #00000099;
+  border: 0;
+  width: 0;
+  height: 0;
+}
+
+#keys {
+  background-color: rgb(68, 103, 126);
+  border-radius: 8px;
+  box-shadow: 0 15px 25px #00000099;
+  border: 0;
   width: 21%;
+  height: fit-content;
+  padding-top: 30px;
+  margin-top: 200px;
 }
 
 #keys,
@@ -85,17 +98,17 @@ div,
 }
 
 #addEmployee {
+  background: linear-gradient(#121214, #5a93c2);
   height: 500px;
-  background-color: #288676cc;
   border-radius: 5px;
-  width: 20%;
+  width: 30%;
   text-align: center;
 }
 #employeeInfo {
+  background: linear-gradient(#121214, #5a93c2);
   height: 500px;
-  background-color: #288676cc;
   border-radius: 5px;
-  width: 70%;
+  width: 65%;
   text-align: center;
 }
 
@@ -107,22 +120,25 @@ div,
 
 input,
 select {
-  border-radius: 0%;
-  background-color: rgb(246, 250, 250);
+  box-shadow: 0 15px 25px #00000099;
+  outline-width: 0;
+  font-size: medium;
+  border-radius: 5px;
+  border: 0;
+  border-radius: 10px;
   margin-bottom: 10px;
-  padding: 8px 0;
-  width: 100%;
-  border: 1px solid #ccc;
+  padding: 9px 0;
+  width: 80%;
   text-align: center;
 }
 
 #submit {
   font-size: 20px;
   padding: 5px;
-  width: 100%;
+  width: 80%;
   height: 40px;
-  border-radius: 5px;
-  background-color: rgba(4, 247, 134, 0.979);
+  border-radius: 10px;
+  background-color: #5a93c2;
   border: 0;
   cursor: pointer;
 }
@@ -132,59 +148,63 @@ select {
 }
 
 /* width */
-::-webkit-scrollbar {
+table::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+table::-webkit-scrollbar-track {
+  margin-top: 50px;
   box-shadow: inset 0 0 5px #d2cce2;
   border-radius: 5px;
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
-  background: #d8d9e07c;
-  border-radius: 1px;
+table::-webkit-scrollbar-thumb {
+  background: linear-gradient(#252323, white);
+  border-radius: 5px;
 }
 
-table {
+#tab {
+  border-radius: 10px;
+  background-color: black;
+  display: block;
+  overflow: auto;
+  height: 400px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
   width: 80%;
   margin: auto;
-  border-collapse: collapse;
-  display: block;
-  height: 400px;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
-.tab, tr, th {
- padding: 0;
+#tab td {
+  padding: 4px;
+  border-radius: 0;
 }
 
-table, th {
+#tab tr:nth-child(even) {
+  background-color: #0b0c0c;
+}
 
+#tab tr:hover {
+  background-color: white;
+  color: black;
+}
+
+#tab th {
+  padding: 10px;
+  text-align: center;
+  background-color: black;
+  color: rgb(236, 226, 226);
   position: sticky;
   top: 0;
 }
 
-th {
-  color: black;
-  background-color: white;
-  border: 1px solid #a59696;
-}
-
-td {
-  color: white;
-  border: 1px solid #a59696;
-}
-
-tr:nth-child(even) {
-  background-color: #3857e09c;
-}
-
 img {
-  background-color: white;
+  border: 1px solid green;
+  border-radius: 3px;
+  background-color: rgb(77, 72, 72);
   cursor: pointer;
   width: 30%;
 }
